<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first_time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mrides.Activity.FirstTimeActivity">

    <TextView
        android:text="@string/welcome_to_mrides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:id="@+id/welcomeTitle"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:alpha="0"/>

    <TextView
        android:text="@string/welcome_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeDescription"
        android:layout_below="@+id/welcomeTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:gravity="center"
        android:alpha="0"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/car1"
        android:id="@+id/imageViewCar"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:translationX="222dp"/>

    <TextView
        android:text="Few more things before we start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView3"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/line"
        android:layout_above="@+id/genderLinearLayout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignBottom="@+id/imageViewCar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/genderLinearLayout">
        <RadioGroup
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/radioWoman"
            android:id="@+id/genderRadioGroup"
            android:layout_marginBottom="13dp"
            android:layout_marginTop="13dp">
            <RadioButton
                android:id="@+id/radioWoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dip"
                android:text="@string/woman"
                android:layout_gravity="right"
                android:textStyle="bold"
                style="@style/regularSizeText"/>
            <RadioButton
                android:id="@+id/radioMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/man"
                android:textStyle="bold"
                style="@style/regularSizeText"/>
        </RadioGroup>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/line"
        android:layout_below="@id/genderLinearLayout"
        android:id="@+id/second"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/second"
        android:id="@+id/smokerLinearLayout">
        <RadioGroup
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/Driver"
            android:id="@+id/smokerRadioGroup"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="13dp">
            <RadioButton
                android:id="@+id/Driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dip"
                android:text="@string/smoker"
                android:layout_gravity="right"
                android:textStyle="bold"
                style="@style/regularSizeText"/>
            <RadioButton
                android:id="@+id/Passenger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/non_smoker"
                android:textStyle="bold"
                style="@style/regularSizeText"/>
        </RadioGroup>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/line"
        android:layout_below="@+id/smokerLinearLayout"/>


    <Button
        android:text="@string/i_am_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firsTimeButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
